aligned cards horizontally and corrected the double boarder radius cirlce

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -351,7 +351,7 @@ $card-font-color: $body-font-color;
 $card-divider-background: $light-gray;
 $card-border: 0px solid $light-gray;
 $card-shadow: none;
-$card-border-radius: 50%;
+// $card-border-radius: 50%;
 $card-padding: $global-padding;
 $card-margin-bottom: $global-margin;
 
