--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -14,4 +14,13 @@
     $card-background: #FF6201;
     border: 10px, solid, #FF6201;
     border-radius: 50%;
+    margin-bottom: 1rem;
+}
+
+.card {
+    max-width: 70%;
+    margin: auto;
+    margin-top: 1em;
+    position: relative;
+    
 }
